# kuu

./: .gitignore  justfile  notice  pyproject.toml  pyrefly.toml  pytest.ini  readme.md  ruff.toml
.github/workflows/: docs.yml  publish-test.yml  publish.yml
docs/: conf.py  config.md  config.rst  index.md  index.rst  integrations.rst  quickstart.md  quickstart.rst  usage.md  usage.rst
docs/_static/: custom.css
examples/: basic.py
kuu/: __init__.py  _import.py  _queue_drain.py  _sig.py  _types.py  _util.py  app.py  cli.py  config.py  context.py  events.py  exceptions.py  handle.py  marshal.py  message.py  otel.py  outcome.py  prometheus.py  registry.py  result.py  task.py  worker.py
kuu/brokers/: __init__.py  _scheduled.py  base.py  memory.py  nats.py  rabbitmq.py  redis.py
kuu/cli/: _dashboard.py  _info.py  _start.py  app.py
kuu/contrib/: __init__.py
kuu/contrib/dishka/: __init__.py
kuu/contrib/otel/: __init__.py  _instrumentor.py  _logging.py  _metrics.py  _traces.py
kuu/contrib/prometheus/: __init__.py
kuu/contrib/structlog/: __init__.py
kuu/middleware/: __init__.py  _task_log.py  base.py  logging.py  retry.py  structlog.py  task_log.py  timeout.py
kuu/observability/: __init__.py  _broker_key.py  _codec.py  _commands.py  _local.py  _log_capture.py  _protocol.py  _ws.py
kuu/orchestrator/: __init__.py  _app_loader.py  _command_service.py  _control.py  _dashboard.py  _event_forwarder.py  _metrics.py  _scheduler.py  _serve.py  _snapshots.py  _watcher.py  _worker.py  main.py
kuu/persistence/: __init__.py  _backend.py  _postgres.py  _rows.py  _sqlite.py  _worker.py
kuu/redis/: __init__.py  _config.py  _transport.py
kuu/results/: __init__.py  base.py  postgres.py  redis.py
kuu/scheduler/: __init__.py  job.py  scheduler.py
kuu/scheduler/schedule/: __init__.py  abc.py  enums.py  exc.py
kuu/scheduler/schedule/_impl/: __init__.py  at.py  between.py  every.py  in_month.py  on.py  on_day.py
kuu/serializers/: __init__.py  base.py  json.py  msgpack.py  pickle.py
kuu/transports/: __init__.py
kuu/transports/nats/: __init__.py  _opts.py  _transport.py
kuu/transports/postgres/: __init__.py  _config.py  _transport.py
kuu/transports/rabbitmq/: __init__.py  _transport.py
kuu/transports/redis/: __init__.py  _config.py  _transport.py
kuu/web/: __init__.py  api.py  dashboard.py  fragments.py  main.py  stats.py
kuu/web/static/: echarts.min.js  kuu.css
kuu/web/templates/: base.html  index.html
kuu/web/templates/fragments/: presets.html  queues.html  scheduler.html  stats.html  task_run_detail.html  task_runs.html  tasks.html  workers.html
qq/: __init__.py  _import.py  _types.py  app.py  cli.py  context.py  events.py  exceptions.py  handle.py  message.py  prometheus.py  registry.py  result.py  serializers.py  task.py  worker.py
qq/abc/: __init__.py  serializer.py
qq/brokers/: base.py  nats.py  redis.py
qq/middleware/: __init__.py  base.py  logging.py  results.py  retry.py  timeout.py
qq/results/: base.py  redis.py
qq/scheduler/: __init__.py  job.py  scheduler.py
qq/serializers/: __init__.py  json.py  msgpack.py  pickle.py
tests/: conftest.py  test_cancellation.py  test_coerce_payload.py  test_config.py  test_dishka.py  test_memory_broker.py  test_observability.py  test_orchestrator.py  test_otel.py  test_payload_immutability.py  test_prometheus.py  test_redis_broker.py  test_scheduler.py  test_worker.py
tests/integration/: conftest.py  test_broker.py  test_cancellation_e2e.py  test_persistence.py  test_redis_broker.py  test_redis_ensure_connected.py  test_redis_worker_e2e.py  test_worker_e2e.py  test_ws_uplink.py
tests/integration/redis/: test_broker_internals.py  test_ensure_connected.py
