[project]
name = "kuu"
version = "0.0.1b1"
description = "lightweight async distributed task queue"
readme = "readme.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Alexey Pechenin", email = "me@pyrorhythm.dev" }]
keywords = [
  "apscheduler",
  "message queue",
  "queue",
  "schedule tasks",
  "scheduler",
  "scheduling",
  "task",
  "task queue",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]
urls = { "homepage" = "https://github.com/pyrorhythm/kuu" }
dependencies = [
  "anyio>=4.4",
  "croniter>=2.0",
  "orjson>=3.10",
  "pydantic>=2.6",
  "typer>=0.24.2",
  "uvloop>=0.22.1",
]

[project.scripts]
kuu = "kuu.cli:main"

[project.optional-dependencies]
msgspec = ["msgspec>=0.21"]
nats = ["nats-py>=2.7"]
prometheus = ["prometheus-client>=0.20"]
redis = ["redis>=5.0"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff",
  "types-croniter>=6.2.2.20260408",
]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
