[project]
name = "kuu"
version = "0.0.1b4"
description = "lightweight async distributed task queue"
readme = "readme.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Alexey Pechenin", email = "me@pyrorhythm.dev" }]
keywords = [
  "apscheduler",
  "message queue",
  "queue",
  "schedule tasks",
  "scheduler",
  "scheduling",
  "task",
  "task queue",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]
urls = { "homepage" = "https://github.com/pyrorhythm/kuu" }
dependencies = [
  "anyio>=4.10,<5",
  "croniter>=6.2",
  "orjson>=3.10",
  "pydantic>=2.12,<3",
  "typer>=0.24.2",
  "uvloop>=0.22.1",
]

[project.scripts]
kuu = "kuu.cli:app"

[project.optional-dependencies]
msgspec = ["msgspec>=0.21"]
nats = ["nats-py>=2.7"]
prometheus = ["prometheus-client>=0.20"]
redis = ["redis>=6.0,<8"]

[dependency-groups]
dev = [
  "kuu",
  "pyrefly>=0.62,<0.65",
  "pytest>=9,<11",
  "pytest-asyncio>=1.3,<1.5",
  "redis>=7.4.0",
  "ruff>=0.15,<0.17",
  "testcontainers>=4.14.2",
  "types-croniter>=6.2,<7",
]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
kuu = { workspace = true }
