[project]
name = "kuu"
version = "0.2.1.post1"
description = "lightweight async distributed task queue"
readme = "readme.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Alexey Pechenin", email = "me@pyrorhythm.dev" }]
keywords = [
    "apscheduler",
    "message queue",
    "queue",
    "schedule tasks",
    "scheduler",
    "scheduling",
    "task",
    "task queue",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
urls = { "homepage" = "https://github.com/pyrorhythm/kuu", "docs" = "https://pyrorhythm.github.io/kuu" }
dependencies = [
    "adaptix>=3.0.0b12",
    "anyio>=4.10,<5",
    "msgspec>=0.21",
    "typer>=0.24.2",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
]

[project.scripts]
kuu = "kuu.cli.app:app"

[project.optional-dependencies]
dashboard = ["jinja2>=3.1.6", "starlette>=1.0.0", "uvicorn>=0.46.0", "websockets>=15.0"]
nats = ["nats-py>=2.7"]
prometheus = ["prometheus-client>=0.20"]
redis = ["redis>=6.0,<8"]
postgres = ["asyncpg>=0.31.0"]

[dependency-groups]
dev = [
    "async-asgi-testclient>=1.4.11",
    "kuu",
    "pydantic>=2.13.3",
    "pyrefly>=0.62,<0.65",
    "pytest>=9,<11",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15,<0.17",
    "testcontainers>=4.14.2",
]
docs = [
    "furo>=2024.8",
    "sphinx>=8.1,<9",
    "sphinx-autobuild>=2024.10",
    "sphinx-autodoc2>=0.5",
    "sphinx-copybutton>=0.5",
]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
kuu = { workspace = true }

[tool.pyrefly]
python_version = "3.13.12"
search-path = ["."]
project-includes = ["kuu"]

project-excludes = ["**/.[!/.]*"]
site-package-path = [
    ".venv/lib/python3.14/site-packages",
    ".venv/lib/python3.13/site-packages",
]
python-interpreter-path = ".venv/bin/python"
check-unannotated-defs = true
infer-return-types = "checked"
ignore-errors-in-generated-code = true
disable-search-path-heuristics = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
indent-style = 'tab'
